--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name fish2363
-          git config user.email a01022639410@gmail.com
+          git config user.email ll9340125@gmail.com
+          
           git add -A .
           git commit -m "generated"
           git push
